[metadata]
name = self-signed
version = 1.0.0
summary = Create self signed certificates with multiple Domain Names (SANs) with style
long_description_content_type = text/markdown
long_description = file: README.md
author = Martin Häcker, Robert Buchholz
author_email = mhaecker ät mac dot com, rbu goodpoint de
url = https://github.com/dwt/self-signed
home-page = http://pypi.python.org/pypi/setup.cfg
license = BSD 2-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX
    Operating System :: Unix
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: Utilities
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.4
py_modules = self_signed

[options.entry_points]
console_scripts =
    self-signed = self_signed:main

[options.extras_require]
test =
    pytest
    tox

